fix: smaller fixes here and there

--- a/monanteras/meatsauce.tex
+++ b/monanteras/meatsauce.tex
@@ -4,9 +4,7 @@
 \index{meat}
 \index{pasta}
 
-Family member: Mom
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 6+ servings} \\
     Prep time: 20 minutes \\
     Cook time: 2 hours \\
@@ -18,18 +16,15 @@ Family member: Mom
     1 onion, diced \\
     Salt and pepper \\
     Olive oil \\
-    Pecorino cheese, Chelmos Greek or other \\
-    \vspace*{\baselineskip}
+    Pecorino cheese, Chelmos Greek or other
 }
+
+Family member: Mom
 
 \begin{figure}
     \includegraphics[width=60mm]{monanteras/images/Meatsauce no cheese.jpg}
     \includegraphics[width=60mm]{monanteras/images/Meatsauce with cheese.jpg}
 \end{figure}
-
-\marginnote{
-    We found that using 650g of ground beef, half the jar of Catelli and half the tomato juice can, makes enough for 2 people (with lots of leftovers). It took us a little over an hour to cook half the quantity - Elsa \& Vaski
-}
 
 \begin{enumerate}
     \item Heat oil in a medium to large sized saucepot and cook the onion.
@@ -38,3 +33,6 @@ Family member: Mom
     \item The sauce is ready when it starts to thicken. Boil your pasta: add 1 tsp of salt to a pot of boiling water and prepare the spaghetti according to the instructions on the package.
     \item Top with meat sauce and sprinkle with lots of pecorino cheese. ENJOY :)
 \end{enumerate}
+
+We found that using 650g of ground beef, half the jar of Catelli and half the tomato juice can, makes enough for 2 people (with lots of leftovers). It took us a little over an hour to cook half the quantity - Elsa \& Vaski
+
