--- a/monanteras/bikini_ladies.tex
+++ b/monanteras/bikini_ladies.tex
@@ -29,10 +29,11 @@
     2 tsp lemon juice \\
     3 cups icing sugar, sifted 
 }
+
 \begin{marginfigure}[20pt]
   \includegraphics[width=60mm]{monanteras/images/Bikini ladies.png}
   \caption{Bikini Ladies and Hipsters}
-\end{marginfigure}[20pt]
+\end{marginfigure}
 
 \textit{Gingerbread Cookies}
 
