fix: copyright alignment

--- a/copyright.tex
+++ b/copyright.tex
@@ -3,12 +3,13 @@
 
 \begin{fullwidth}
 % \vspace*{\fill} % Pushes everything below it to the bottom
-\vspace*{120mm} % Pushes everything below it to the bottom
-\setlength{\parindent}{0pt} % No indentation for paragraphs
+\vspace*{110mm} % Pushes everything below it to the bottom
+\setlength{\parindent}{-7mm} % No indentation for paragraphs
 \setlength{\parskip}{\baselineskip} % Set space between paragraphs
 
 % Content
-Copyright \copyright\ \the\year\ % \author
+\noindent
+\par Copyright \copyright\ \the\year\ % \author
 
 \par\textsc{Published by \publisher}
 
