feat: alignments done, need to place figures next

--- a/main.tex
+++ b/main.tex
@@ -93,8 +93,9 @@
 
 
 \backmatter
-\fancyfoot[C]{\small{Index}}
-\userecipegeometry
+\ensureevenpage
+% \fancyfoot[C]{\small{Index}}
+\useindexgeometry
 \printindex
 
 \end{document}
