fix: drop marginfigure for figure

--- a/dermardiros/anoushabour.tex
+++ b/dermardiros/anoushabour.tex
@@ -16,10 +16,10 @@
     1/4 tsp rose water or orange blossom water, optional 
 }
 
-\begin{marginfigure}[20pt]
+\begin{figure}
   \includegraphics[width=60mm]{dermardiros/images/Anoushabour.JPG}
     \caption{Anoushabour from New Year's Eve brunch at AJ and Eddy's in 2011!}
-\end{marginfigure}
+\end{figure}
 
 \textit{Sweet barley pudding}
 
