--- a/dermardiros/katnabour.tex
+++ b/dermardiros/katnabour.tex
@@ -21,10 +21,10 @@ Family member: Sybil
 
 \newthought{Secret tip:} microwave for a few second and serve warm in a small coffee cup with a sprinkle of cinnamon.
 
-\begin{marginfigure}
+\begin{figure}
   \includegraphics[width=60mm]{dermardiros/images/Rice pudding.jpg}
   \caption{Anoushabour made in Barcelona}
-\end{marginfigure}
+\end{figure}
 
 
 \begin{enumerate}
