--- a/extra/chocolate_chip_cookies.tex
+++ b/extra/chocolate_chip_cookies.tex
@@ -20,11 +20,11 @@
     3/4 cup chocolate chips (I use a combination of chocolate chips and chocolate chunks)
 }
 
-\begin{marginfigure}[20pt]
+\begin{figure}
   \includegraphics[width=44mm]{extra/images/BAKERY-STYLE-CHOCOLATE-CHIP-COOKIES-9-637x637-1.jpg}
   \caption{This is a cookie}
   \label{fig:marginfig}
-\end{marginfigure}
+\end{figure}
 
 
 \newthought{These are the best} soft chocolate chip cookies! No chilling required. Just ultra thick, soft, classic chocolate chip cookies!
