--- a/monanteras/bikini_ladies.tex
+++ b/monanteras/bikini_ladies.tex
@@ -30,10 +30,10 @@
     3 cups icing sugar, sifted 
 }
 
-\begin{marginfigure}[20pt]
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Bikini ladies.png}
   \caption{Bikini Ladies and Hipsters}
-\end{marginfigure}
+\end{figure}
 
 \textit{Gingerbread Cookies}
 
