--- a/monanteras/eastereggs.tex
+++ b/monanteras/eastereggs.tex
@@ -27,10 +27,10 @@ Family member: Mom
     \item Using the same colored water, do the same with the rest of the eggs. 
 \end{enumerate}
 
-\begin{marginfigure}[20pt]
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Easter eggs with grandma.jpg}
   \caption{Easter with Grandma Eleni}
-\end{marginfigure}
+\end{figure}
 
 \begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Eggs 3.jpg}
