--- a/monanteras/fassolakia.tex
+++ b/monanteras/fassolakia.tex
@@ -23,10 +23,10 @@
 
 Family member: Mom
 
-\begin{marginfigure}[20pt]
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Green beans 1.jpg}
   \caption{Fassolakia}
-\end{marginfigure}
+\end{figure}
 
 \begin{enumerate}
     \item Wash green beans and remove both edges.
