--- a/monanteras/gemista.tex
+++ b/monanteras/gemista.tex
@@ -34,9 +34,9 @@ Family member: Mom
 
 \newthought {Gemista} are vegetables stuffed with rice, minced meat and herbs cooked with potatoes in a tomato sauce. They are usually made with tomatoes, bell peppers, zucchini, eggplants... My grandmother even stuffed potatoes because I didn't like vegetables as a child! \textgreek{Καλή όρεξη}!
 
-\begin{marginfigure}
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Cooked gemista.jpg}
-\end{marginfigure}
+\end{figure}
 
 \begin{enumerate}
     \item Preheat oven to 350\degree F and grease a 9X13-inch ovenproof dish with Pam spray.
