--- a/monanteras/kolokithokeftedes.tex
+++ b/monanteras/kolokithokeftedes.tex
@@ -23,9 +23,9 @@
     1 tbsp oil 
 } 
 
-\begin{marginfigure}
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Zucchini fritter.jpg}
-\end{marginfigure}
+\end{figure}
 
 \textit{Zucchini fritters}
 
