--- a/monanteras/lemon_cake.tex
+++ b/monanteras/lemon_cake.tex
@@ -22,10 +22,10 @@
     Slivered almonds
 }
 
-\begin{marginfigure}[20pt]
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Shirriff Lemon pie mix.png}
   \caption{Shirriff Lemon pie mix}
-\end{marginfigure}
+\end{figure}
 
 \textit{Lemon no-bake cake with peaches}
 
