--- a/velsa/babka.tex
+++ b/velsa/babka.tex
@@ -14,9 +14,9 @@
     2 tsp mahleb
 }
 
-\begin{marginfigure}[20pt]
+\begin{figure}
   \includegraphics[width=60mm]{velsa/images/Babka.png}
-\end{marginfigure}
+\end{figure}
 
 Family member: Elsa \& Vaski
 
