--- a/velsa/gigantest_plaki.tex
+++ b/velsa/gigantest_plaki.tex
@@ -26,9 +26,9 @@
 
 Family member: Elsa \& Vaski
 
-\begin{marginfigure}
+\begin{figure}
   \includegraphics[width=60mm]{velsa/images/Gigantes.jpg}
-\end{marginfigure}
+\end{figure}
 
 \newthought{Who doesn't love} a bowl of gigantes plaki with a hearty sourdough bread and a generous slice of feta?
 
