--- a/velsa/kourabiewithnuts.tex
+++ b/velsa/kourabiewithnuts.tex
@@ -21,9 +21,9 @@
     Icing sugar for powdering
 }
 
-\begin{marginfigure}
+\begin{figure}
   \includegraphics[width=60mm]{velsa/images/Kourabie.jpg}
-\end{marginfigure}
+\end{figure}
 
 \textit{Shortbread cookies with powdered sugar and almonds}
 
