--- a/dermardiros/lahanai_dolma.tex
+++ b/dermardiros/lahanai_dolma.tex
@@ -20,10 +20,10 @@
     3/4 cup + 1/4 - 1/3 cup Passata, Unico (low sodium)
 }
 
-\begin{marginfigure}[20pt]
+\begin{figure}
   \includegraphics[width=60mm]{dermardiros/images/PXL_20240128_010747331.PORTRAIT.ORIGINAL.jpg}
   \caption{Topped with yogurt and dill!}
-\end{marginfigure}
+\end{figure}
 
 \textit{Cabbage rolls stuffed with meat and rice}
 
