--- a/monanteras/diples.tex
+++ b/monanteras/diples.tex
@@ -32,7 +32,7 @@ Family member: Grandma Elisavet
     \item Warm honey in a small pot. Once the diples have cooled down, drizzle some honey on top, add crushed walnuts and a sprinkle of cinnamon. Serve with coffee after Christmas dinner!
 \end{enumerate}
 
-\begin{marginfigure}
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Diples.jpg}
   \caption{Diples from a bakery in the town of Levidi, Arcadia}
-\end{marginfigure}
+\end{figure}
