--- a/monanteras/easter_koulourakia.tex
+++ b/monanteras/easter_koulourakia.tex
@@ -37,9 +37,9 @@ Family member: Grandma Eleni
     \item Bake at 350\degree F for 8 minutes, turn the baking sheet and for another 6-8 minutes.
 \end{enumerate}
 
-\begin{marginfigure}
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Easter koulourakia.jpg}
-\end{marginfigure}
+\end{figure}
 
 \begin{figure}
   \includegraphics[width=60mm]{monanteras/images/IMG_20241009_171710.jpg}
