feat: add command for marginfigure

--- a/dermardiros/lahanai_dolma.tex
+++ b/dermardiros/lahanai_dolma.tex
@@ -11,7 +11,7 @@
     Cook time: 45 minutes \\
     \vspace*{\baselineskip}
     
-    1/2 savoy cabbage \\
+    1/2 Savoy cabbage \\
     1 lb of ground beef \\
     1/4 cup + 1 tbsp rice, Calrose \\
     1 medium onion, chopped \\
@@ -20,10 +20,7 @@
     3/4 cup + 1/4 - 1/3 cup Passata, Unico (low sodium)
 }
 
-\begin{figure}
-  \includegraphics[width=60mm]{dermardiros/images/PXL_20240128_010747331.PORTRAIT.ORIGINAL.jpg}
-  \caption{Topped with yogurt and dill!}
-\end{figure}
+\marginalfigure{dermardiros/images/PXL_20240128_010747331.PORTRAIT.ORIGINAL.jpg}{Topped with yogurt and dill!}
 
 \textit{Cabbage rolls stuffed with meat and rice}
 
