feat: side by side figures

--- a/dermardiros/beureg.tex
+++ b/dermardiros/beureg.tex
@@ -17,6 +17,7 @@
     1 tsp baking powder \\
     1 egg \\
     1 cup milk, room temperature \\
+    \vspace*{\baselineskip}
 
     \textbf{Ingredients for filling} \\
     1 onion, diced \\
@@ -24,6 +25,7 @@
     250g feta, grated \\
     2-3 eggs \\
     Milk \\
+    \vspace*{\baselineskip}
 
     \textbf{Egg wash} \\
     1 egg \\
