--- a/dermardiros/grandma_cake.tex
+++ b/dermardiros/grandma_cake.tex
@@ -35,13 +35,15 @@ Family member: Metzma Lucie \& Sybil
     \item Bake at 350\degree F for 45 minutes to 1 hour.
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=60mm]{dermardiros/images/Grandma cake 1.JPG}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{dermardiros/images/Grandma cake 1.JPG}
+% \end{figure}
+%
+% \begin{figure}
+%   \includegraphics[width=50mm]{dermardiros/images/Grandma cake 2.jpg}
+% \end{figure}
 
-\begin{figure}
-  \includegraphics[width=50mm]{dermardiros/images/Grandma cake 2.jpg}
-\end{figure}
+\twosidecaption{dermardiros/images/Grandma cake 1.JPG}{dermardiros/images/Grandma cake 2.jpg}{Marble cake with various designs}{fig:grandmacake}
 
 Sybil’s alternatives: orange zest and 1 cup chocolate chips, 2 bananas, 1 cup raisins… You can use more cocoa powder if you want to have a deeper chocolate taste.
 
