feat: add figure macros and first pass at placing all images

--- a/dermardiros/anoushabour.tex
+++ b/dermardiros/anoushabour.tex
@@ -16,10 +16,11 @@
     1/4 tsp rose water or orange blossom water, optional 
 }
 
-\begin{figure}
-  \includegraphics[width=60mm]{dermardiros/images/Anoushabour.JPG}
-    \caption{Anoushabour from New Year's Eve brunch at AJ and Eddy's in 2011!}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{dermardiros/images/Anoushabour.JPG}
+%     \caption{Anoushabour from New Year's Eve brunch at AJ and Eddy's in 2011!}
+% \end{figure}
+\marginalfigure{dermardiros/images/Anoushabour.JPG}{Anoushabour from New Year's Eve brunch at AJ and Eddy's in 2011!}{fig:anoushabour}
 
 \textit{Sweet barley pudding}
 
