--- a/dermardiros/best_chocolatechip_cookies.tex
+++ b/dermardiros/best_chocolatechip_cookies.tex
@@ -29,6 +29,9 @@ Family member: Emma
     \item Bake for 12-15 minutes.
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=70mm]{dermardiros/images/Dzovag's cookies written by Emma.jpeg}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=70mm]{dermardiros/images/Dzovag's cookies written by Emma.jpeg}
+% \end{figure}
+
+\captionfigure{dermardiros/images/Dzovag's cookies written by Emma.jpeg}{Handwritten recipe}{fig:chocolatechip_cookies}
+
