--- a/dermardiros/chocolate_fridge_cake.tex
+++ b/dermardiros/chocolate_fridge_cake.tex
@@ -30,9 +30,12 @@ Family member: Metzma Lucie \& Dan
     \item Refrigerate overnight.
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=70mm]{dermardiros/images/Grandma fridge cake 1.jpg}
-  \caption{Chocolate cake made by Dan}
-  \includegraphics[width=70mm]{dermardiros/images/Grandma fridge cake 2.jpg}
-  \caption{Coffee time at Dan's!}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=70mm]{dermardiros/images/Grandma fridge cake 1.jpg}
+%   \caption{Chocolate cake made by Dan}
+%   \includegraphics[width=70mm]{dermardiros/images/Grandma fridge cake 2.jpg}
+%   \caption{Coffee time at Dan's!}
+% \end{figure}
+
+\twosidecaptionfigure{dermardiros/images/Grandma fridge cake 1.jpg}{dermardiros/images/Grandma fridge cake 2.jpg}{Chocolate cake made by Dan enjoyed with a coffee!}{fig:grandmacake}
+
