--- a/dermardiros/ciambalone.tex
+++ b/dermardiros/ciambalone.tex
@@ -40,7 +40,10 @@ Family member: Aunt Joanne
     \item Bake for 35 minutes at 180\degree C (350\degree F). Let the cake cool in the mold and remove from mold after 30 minutes.
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=70mm]{dermardiros/images/Ciambalone.jpg}
-    \caption{Grandma Lucie's birthday in 2024}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=70mm]{dermardiros/images/Ciambalone.jpg}
+%     \caption{Grandma Lucie's birthday in 2024}
+% \end{figure}
+
+\captionfigure{dermardiros/images/Ciambalone.jpg}{Grandma Lucie's birthday in 2024}{fig:ciambalone}
+
