--- a/dermardiros/grandma_cake.tex
+++ b/dermardiros/grandma_cake.tex
@@ -43,7 +43,7 @@ Family member: Metzma Lucie \& Sybil
 %   \includegraphics[width=50mm]{dermardiros/images/Grandma cake 2.jpg}
 % \end{figure}
 
-\twosidecaption{dermardiros/images/Grandma cake 1.JPG}{dermardiros/images/Grandma cake 2.jpg}{Marble cake with various designs}{fig:grandmacake}
+\twosidecaptionfigure{dermardiros/images/Grandma cake 1.JPG}{dermardiros/images/Grandma cake 2.jpg}{Marble cake with various designs}{fig:grandmacake}
 
-Sybil’s alternatives: orange zest and 1 cup chocolate chips, 2 bananas, 1 cup raisins… You can use more cocoa powder if you want to have a deeper chocolate taste.
+Sybil’s alternatives: orange zest and 1 cup chocolate chips, 2 bananas, 1 cup raisins. You can use more cocoa powder if you want to have a deeper chocolate taste.
 
