--- a/dermardiros/katnabour.tex
+++ b/dermardiros/katnabour.tex
@@ -21,11 +21,12 @@ Family member: Sybil
 
 \newthought{Secret tip:} microwave for a few second and serve warm in a small coffee cup with a sprinkle of cinnamon.
 
-\begin{figure}
-  \includegraphics[width=60mm]{dermardiros/images/Rice pudding.jpg}
-  \caption{Anoushabour made in Barcelona}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{dermardiros/images/Rice pudding.jpg}
+%   \caption{Anoushabour made in Barcelona}
+% \end{figure}
 
+\marginalfigure{dermardiros/images/Rice pudding.jpg}{Anoushabour made in Barcelona}{fig:katnabour}
 
 \begin{enumerate}
     \item In a pot, cook the rice in 1 cup of milk on low heat.
