--- a/dermardiros/khorabie.tex
+++ b/dermardiros/khorabie.tex
@@ -25,10 +25,13 @@
 
 Family member: Metzma Lucie
 
-\begin{figure}
-  \includegraphics[width=60mm]{dermardiros/images/PXL_20240427_185332023.PORTRAIT.ORIGINAL.jpg}
-  \caption{Khorabiè mold}
-\end{figure}
+
+\marginalfigure{dermardiros/images/PXL_20240427_185332023.PORTRAIT.ORIGINAL.jpg}{Khorabiè mold}{fig:khorabie}
+
+% \begin{figure}
+%   \includegraphics[width=60mm]{dermardiros/images/PXL_20240427_185332023.PORTRAIT.ORIGINAL.jpg}
+%   \caption{Khorabiè mold}
+% \end{figure}
 
 \begin{enumerate}
     \item In a bowl, mix the oil, milk, melted butter and melted Crisco.
