--- a/dermardiros/yulelog.tex
+++ b/dermardiros/yulelog.tex
@@ -19,7 +19,7 @@
     3/4 cup cocoa powder \\
     \vspace*{\baselineskip}
 
-\textbf{Ingredients for the Mocha-Cream Filling} \\
+\textbf{Ingredients for the mocha-cream filling} \\
     3 cups whipping cream \\
     1 cup cocoa powder \\
     1/2 cup confectioners’ sugar \\
@@ -47,16 +47,15 @@ Family member: Aunt Joanne
     \item If desired, you can cut a piece at the end of the log cake and place it on the top of the cake – far left side to resemble a knot in the log. Spread the filling on the slice too.
 \end{enumerate}
 
-You can decorate the top of the log cake either with:
-\vspace*{\baselineskip}
-- Lindt chocolate balls, alternating white, dark, milk chocolate. You can put raspberries between the chocolate balls \\
-- Chocolate Santa Clause or Snowman
+You can decorate the top of the log cake either with: (i) Lindt chocolate balls, alternating white, dark, milk chocolate. You can put raspberries between the chocolate balls, or (ii) Chocolate Santa Clause or Snowman.
 
+% \begin{figure}
+%   \includegraphics[width=60mm]{dermardiros/images/Logcake.JPG}
+%     \caption{Yule Log we made with AJ in 2011}
+% \end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{dermardiros/images/Logcake 3.JPG}    
+% \end{figure}
 
-\begin{figure}
-  \includegraphics[width=60mm]{dermardiros/images/Logcake.JPG}
-    \caption{Yule Log we made with AJ in 2011}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=60mm]{dermardiros/images/Logcake 3.JPG}    
-\end{figure}
+\twosidecaptionfigure{dermardiros/images/Logcake.JPG}{dermardiros/images/Logcake 3.JPG}{Yule Log we made with AJ in 2011}{fig:logcake}
+
