--- a/monanteras/bikini_ladies.tex
+++ b/monanteras/bikini_ladies.tex
@@ -30,11 +30,13 @@
     3 cups icing sugar, sifted 
 }
 
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Bikini ladies.png}
-  \caption{Bikini Ladies and Hipsters}
-\end{figure}
+\marginalfigure{monanteras/images/Bikini ladies.png}{Bikini Ladies and Hipsters}{fig:bikiniladies}
 
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Bikini ladies.png}
+%   \caption{Bikini Ladies and Hipsters}
+% \end{figure}
+%
 \textit{Gingerbread Cookies}
 
 Family member: Elsa \& Helen
