--- a/monanteras/easter_koulourakia.tex
+++ b/monanteras/easter_koulourakia.tex
@@ -23,6 +23,8 @@
 
 Family member: Grandma Eleni
 
+\marginalfigure{monanteras/images/Easter koulourakia.jpg}{Easter koulourakia}{fig:easter_koulourakia}
+
 \newthought{Grandma} \textgreek{Ελένη} would make \textgreek{κουλουράκια} every Easter. They are best eaten soon after baking with a coffee or dipped in milk. Since she made a large batch, she would keep them stored in Tupperwares, which made them soft. We all preferred them that way!
 
 \begin{enumerate}
@@ -37,11 +39,14 @@ Family member: Grandma Eleni
     \item Bake at 350\degree F for 8 minutes, turn the baking sheet and for another 6-8 minutes.
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Easter koulourakia.jpg}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Easter koulourakia.jpg}
+% \end{figure}
+%
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/IMG_20241009_171710.jpg}
+%   \caption{Us in our Easter outfits, with our white Easter shoes}
+% \end{figure}
 
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/IMG_20241009_171710.jpg}
-  \caption{Us in our Easter outfits, with our white Easter shoes}
-\end{figure}
+\captionfigure{monanteras/images/IMG_20241009_171710.jpg}{Elsa and Helen in Easter outfits, with white Easter shoes!}{fig:easter_koulourakia_2}
+
