--- a/monanteras/fassolakia.tex
+++ b/monanteras/fassolakia.tex
@@ -1,5 +1,5 @@
 \chapter{Fassolakia}
-\label{ch:fakes}
+\label{ch:fassolakia}
 \index{meal}
 \index{green beans}
 \index{tomato}
@@ -23,10 +23,12 @@
 
 Family member: Mom
 
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Green beans 1.jpg}
-  \caption{Fassolakia}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Green beans 1.jpg}
+%   \caption{Fassolakia}
+% \end{figure}
+
+\marginalfigure{monanteras/images/Green beans 1.jpg}{Fassolakia}{fig:fassolakia}
 
 \begin{enumerate}
     \item Wash green beans and remove both edges.
