--- a/monanteras/lemon_cake.tex
+++ b/monanteras/lemon_cake.tex
@@ -22,11 +22,13 @@
     Slivered almonds
 }
 
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Shirriff Lemon pie mix.png}
-  \caption{Shirriff Lemon pie mix}
-\end{figure}
+\marginalfigure{monanteras/images/Shirriff Lemon pie mix.png}{Shirriff Lemon pie mix}{fig:Lemoncake}
 
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Shirriff Lemon pie mix.png}
+%   \caption{Shirriff Lemon pie mix}
+% \end{figure}
+%
 \textit{Lemon no-bake cake with peaches}
 
 Family member: Grandma Eleni
@@ -41,10 +43,13 @@ Family member: Grandma Eleni
     \item Decorate with maraschino cherries, slivered almonds, and some peaches if desired. Keep in fridge until ready to serve.
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=80mm]{monanteras/images/Lemon cake.jpg}
-    \caption{Celebrating Grandma's 84th birthday}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=80mm]{monanteras/images/Lemon cake 2.jpg}
-\end{figure}
+\captionfigure{monanteras/images/Lemon cake.jpg}{Grandma Eleni with her cake}{fig:Lemoncake_2}
+\captionfigure{monanteras/images/Lemon cake 2.jpg}{Celebrating Grandma's 84th birthday}{fig:Lemoncake_3}
+
+% \begin{figure}
+%   \includegraphics[width=80mm]{monanteras/images/Lemon cake.jpg}
+%     \caption{Celebrating Grandma's 84th birthday}
+% \end{figure}
+% \begin{figure}
+%   \includegraphics[width=80mm]{monanteras/images/Lemon cake 2.jpg}
+% \end{figure}
