--- a/monanteras/meatsauce.tex
+++ b/monanteras/meatsauce.tex
@@ -21,10 +21,10 @@
 
 Family member: Mom
 
-\begin{figure}
-    \includegraphics[width=60mm]{monanteras/images/Meatsauce no cheese.jpg}
-    \includegraphics[width=60mm]{monanteras/images/Meatsauce with cheese.jpg}
-\end{figure}
+% \begin{figure}
+%     \includegraphics[width=60mm]{monanteras/images/Meatsauce no cheese.jpg}
+%     \includegraphics[width=60mm]{monanteras/images/Meatsauce with cheese.jpg}
+% \end{figure}
 
 \begin{enumerate}
     \item Heat oil in a medium to large sized saucepot and cook the onion.
@@ -35,4 +35,6 @@ Family member: Mom
 \end{enumerate}
 
 We found that using 650g of ground beef, half the jar of Catelli and half the tomato juice can, makes enough for 2 people (with lots of leftovers). It took us a little over an hour to cook half the quantity - Elsa \& Vaski
+
+\twosidecaptionfigure{monanteras/images/Meatsauce no cheese.jpg}{monanteras/images/Meatsauce with cheese.jpg}{Pasta with meatsauce. (Left) Without added cheese, (Right) With added cheese.}{fig:meatsauce}
 
