--- a/monanteras/patatesavga.tex
+++ b/monanteras/patatesavga.tex
@@ -31,11 +31,14 @@ Family member: Grandma Elisavet
     \item Put the potatoes and eggs onto a large place and sprinkle lots of grated cheese. Serve warm!
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Dara.pdf}
-  \caption{The House}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Grandma elisavet.jpg}
-  \caption{In front of the house in Dara, Tripoli}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Dara.pdf}
+%   \caption{The House}
+% \end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Grandma elisavet.jpg}
+%   \caption{In front of the house in Dara, Tripoli}
+% \end{figure}
+
+\twosidecaptionfigure{monanteras/images/Dara.pdf}{monanteras/images/Grandma elisavet.jpg}{(Left) The house, (Right) In front of the house in Dara, Tripoli}{fig:eggswithpotatoes}
+
