--- a/monanteras/portokalopita.tex
+++ b/monanteras/portokalopita.tex
@@ -51,12 +51,14 @@ Family member: Helen
     \item Let the cake cool before cutting, to allow the syrup to be fully absorbed.
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/portokalopita.jpg}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/portokalopita2.jpg}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/portokalopita.jpg}
+% \end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/portokalopita2.jpg}
+% \end{figure}
 
 You can decorate each piece of portokalopita with slices of oranges or keep it simple. Gets better with time :)
+
+\twosidecaptionfigure{monanteras/images/portokalopita.jpg}{monanteras/images/portokalopita2.jpg}{(Left) Portokalopita, (Right) The Maestra at work!}{fig:portokalopita}
 
