--- a/velsa/gigantest_plaki.tex
+++ b/velsa/gigantest_plaki.tex
@@ -26,10 +26,12 @@
 
 Family member: Elsa \& Vaski
 
-\begin{figure}
-  \includegraphics[width=60mm]{velsa/images/Gigantes.jpg}
-\end{figure}
+\marginalfigure{velsa/images/Gigantes.jpg}{Gigantes}{fig:gigantes-plaki}
 
+% \begin{figure}
+%   \includegraphics[width=60mm]{velsa/images/Gigantes.jpg}
+% \end{figure}
+%
 \newthought{Who doesn't love} a bowl of gigantes plaki with a hearty sourdough bread and a generous slice of feta?
 
 \bigskip
