--- a/velsa/tsoureki_choreg.tex
+++ b/velsa/tsoureki_choreg.tex
@@ -50,12 +50,16 @@ Family member: Elsa \& Vaski
     \item Cool, share with family/friends and enjoy with coffee!
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=70mm]{velsa/images/PXL_20240331_211621965.PORTRAIT.ORIGINAL.jpg}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=70mm]{velsa/images/PXL_20240331_230346663.PORTRAIT.ORIGINAL.jpg}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=100mm]{velsa/images/Tsoureki braid_Aki.PNG}
-\end{figure}
+\twosidecaptionfigure{velsa/images/PXL_20240331_211621965.PORTRAIT.ORIGINAL.jpg}{velsa/images/PXL_20240331_230346663.PORTRAIT.ORIGINAL.jpg}{Tsoureki/Cheureg hybrid pre and post baking}{fig:cheureg}
+
+\captionfigure{velsa/images/Tsoureki braid_Aki.PNG}{Four-braid braiding instructions}{fig:cheureg_braid}
+
+% \begin{figure}
+%   \includegraphics[width=70mm]{velsa/images/PXL_20240331_211621965.PORTRAIT.ORIGINAL.jpg}
+% \end{figure}
+% \begin{figure}
+%   \includegraphics[width=70mm]{velsa/images/PXL_20240331_230346663.PORTRAIT.ORIGINAL.jpg}
+% \end{figure}
+% \begin{figure}
+%   \includegraphics[width=100mm]{velsa/images/Tsoureki braid_Aki.PNG}
+% \end{figure}
