--- a/dermardiros/lahanai_dolma.tex
+++ b/dermardiros/lahanai_dolma.tex
@@ -20,7 +20,7 @@
     3/4 cup + 1/4 - 1/3 cup Passata, Unico (low sodium)
 }
 
-\marginalfigure{dermardiros/images/PXL_20240128_010747331.PORTRAIT.ORIGINAL.jpg}{Topped with yogurt and dill!}
+\marginalfigure{dermardiros/images/PXL_20240128_010747331.PORTRAIT.ORIGINAL.jpg}{Topped with yogurt and dill!}{fig:lahanai_dolma}
 
 \textit{Cabbage rolls stuffed with meat and rice}
 
