--- a/monanteras/eastereggs.tex
+++ b/monanteras/eastereggs.tex
@@ -17,6 +17,8 @@
 
 Family member: Mom
 
+\marginalfigure{monanteras/images/Eggs 7.jpg}{Red Easter eggs}{fig:eastereggs}
+
 \newthought{After every} Easter dinner we would all gather around the table to break the painted eggs. At the end, we would have egg shell on the entire table and our hands would be red! And every year, a different person would have the "strongest" egg!     The dye can be found at Greek bakeries such as at Afroditi or Serano Bakery in Laval. Mom found this method to yield the deepest red colored eggs.
 
 \begin{enumerate}
@@ -27,20 +29,23 @@ Family member: Mom
     \item Using the same colored water, do the same with the rest of the eggs. 
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Easter eggs with grandma.jpg}
-  \caption{Easter with Grandma Eleni}
-\end{figure}
+\twosidecaptionfigure{monanteras/images/Easter eggs with grandma.jpg}{monanteras/images/Eggs 3.jpg}{Easter with Grandma Eleni}{fig:eastereggs_2}
+\twosidecaptionfigure{monanteras/images/Eggs 5.jpg}{monanteras/images/Eggs 4.jpg}{Big batch of Easter eggs}{fig:eastereggs_3}
 
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Eggs 3.jpg}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Eggs 5.jpg}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Eggs 4.jpg}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Eggs 7.jpg}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Easter eggs with grandma.jpg}
+%   \caption{Easter with Grandma Eleni}
+% \end{figure}
+%
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Eggs 3.jpg}
+% \end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Eggs 5.jpg}
+% \end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Eggs 4.jpg}
+% \end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Eggs 7.jpg}
+% \end{figure}
