--- a/monanteras/kolokithokeftedes.tex
+++ b/monanteras/kolokithokeftedes.tex
@@ -23,9 +23,11 @@
     1 tbsp oil 
 } 
 
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Zucchini fritter.jpg}
-\end{figure}
+% \begin{figure}
+%   \includegraphics[width=60mm]{monanteras/images/Zucchini fritter.jpg}
+% \end{figure}
+
+\marginalfigure{monanteras/images/Zucchini fritter.jpg}{Kolokithokeftedes}{fig:kolokithokeftedes}
 
 \textit{Zucchini fritters}
 
