--- a/velsa/kourabiewithnuts.tex
+++ b/velsa/kourabiewithnuts.tex
@@ -21,10 +21,12 @@
     Icing sugar for powdering
 }
 
-\begin{figure}
-  \includegraphics[width=60mm]{velsa/images/Kourabie.jpg}
-\end{figure}
+\marginalfigure{velsa/images/Kourabie.jpg}{Kourabie}{fig:kourabie}
 
+% \begin{figure}
+%   \includegraphics[width=60mm]{velsa/images/Kourabie.jpg}
+% \end{figure}
+%
 \textit{Shortbread cookies with powdered sugar and almonds}
 
 Family member: Elsa \& Vaski
