feat: update main to include all the new recipes

--- a/main.tex
+++ b/main.tex
@@ -22,21 +22,28 @@
 \part{Dermardiros Family}  % images in \dermardiros\images, ditto for rest
 \fancyfoot[C]{\small{Dermardiros Family}}
 \userecipegeometry
-\include{dermardiros/clementinesalad}
-\include{dermardiros/strawberrysalad}
-\include{dermardiros/tahini}
-\include{dermardiros/betteraves}
-\include{dermardiros/lahanai_dolma}
-\include{dermardiros/mantuh}
-\include{dermardiros/foul}
-\include{dermardiros/koubeba}
-\include{dermardiros/souloukefteh}
+\include{dermardiros/armeniancoffee}
+\include{dermardiros/frenchtoast}
 \include{dermardiros/batons_sale}
 \include{dermardiros/beureg}
+\include{dermardiros/beuregtriangles}
+\include{dermardiros/clementinesalad}
+\include{dermardiros/strawberrysalad}
+\include{dermardiros/betteraves}
 \include{dermardiros/quiche}
 \include{dermardiros/hamquiche}
 \include{dermardiros/meatpies}
+\include{dermardiros/tahini}
+\include{dermardiros/foul}
+\include{dermardiros/koubeba}
+\include{dermardiros/keufte}
+\include{dermardiros/mantuh}
+\include{dermardiros/souloukefteh}
+\include{dermardiros/lahanai_dolma}
 \include{dermardiros/pastameatsauce}
+\include{dermardiros/mantuhshahinian}
+\include{dermardiros/dinerburgers}
+\include{dermardiros/bourgignon}
 \include{dermardiros/biscuits_grandmere}
 \include{dermardiros/grandma_cake}
 \include{dermardiros/chocolate_fridge_cake}
@@ -48,28 +55,40 @@
 \include{dermardiros/ciambalone}
 \include{dermardiros/best_chocolatechip_cookies}
 \include{dermardiros/banana_cake}
-% \include{dermardiros/cheureg}  
+% \include{dermardiros/cheureg}
 \restoregeometry
 
 \ensureevenpage
 \part{Monanteras Family}
 \fancyfoot[C]{\small{Monanteras Family}}
 \userecipegeometry
+\restoregeometry
+
+\ensureevenpage
 \include{monanteras/patatesavga}
 \include{monanteras/fakes}
+\include{monanteras/tiropita}
+\include{monanteras/hortopita}
+\include{monanteras/tiropitakia_spanakopitakia}
+\include{monanteras/dolmadakia}
+\include{monanteras/kolokithokeftedes}
+\include{monanteras/fassolada}
+\include{monanteras/lemonpotatoes}
 \include{monanteras/fassolakia}
 \include{monanteras/mavromatika}
-\include{monanteras/kolokithokeftedes}
 \include{monanteras/hilopites with chicken}
+\include{monanteras/chickenwithgarlic}
 \include{monanteras/chicken with potatoes}
 \include{monanteras/meatsauce}
+\include{monanteras/pastitsiomom}
+\include{monanteras/kokkinisto}
 \include{monanteras/lasagna}
 \include{monanteras/gemista}
 \include{monanteras/lamb and potatoes}
-% \include{monanteras/chocolate_cake}
-\include{monanteras/easter_koulourakia}
+\include{monanteras/chocolate_cake}
 \include{monanteras/eastereggs}
-% \include{monanteras/moustokouloura}
+\include{monanteras/easter_koulourakia}
+\include{monanteras/moustokouloura cookies}
 \include{monanteras/karidopita}
 \include{monanteras/portokalopita}
 \include{monanteras/melomakarona}
@@ -77,18 +96,17 @@
 \include{monanteras/lemon_cake}
 \include{monanteras/tsoureki}
 \include{monanteras/bikini_ladies}
-\restoregeometry
 
-\ensureevenpage
 \part{Elsa \& Vasken}
 \fancyfoot[C]{\small{Elsa \& Vasken}}
 \userecipegeometry
 \include{velsa/gigantest_plaki}
 \include{velsa/roasted_beet_salad_with_ricotta}
+\include{velsa/pastitsio}
+\include{velsa/mozaiko}
 \include{velsa/kourabiewithnuts}
 \include{velsa/tsoureki_choreg}
-% \include{velsa/babka}
-% \include{extra/chocolate_chip_cookies}
+\include{velsa/babka}
 \restoregeometry
 
 
